--- a/.github/workflows/build_website.yml
+++ b/.github/workflows/build_website.yml
@@ -11,6 +11,6 @@ jobs:
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4.3.3
         with:
-          token: ${{ secrets.PAT }}
+          token: ${{ secrets.DeployPAT }}
           branch: main # The branch the action should deploy to.
           folder: build # The folder the action should deploy.
